# thanakan

./: .dockerignore  .env.encrypted  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README (2).md  README (3).md  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  update.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  pypi.yml
callback_scb/: Taskfile.yml  main.py
callback_scb/sample/: cod.json.encrypted.saltpack  cot.json.encrypted.saltpack
docker/: Dockerfile  README.md
playground/: Taskfile.yml  packages.txt  requirements.txt  slip_tester.py
playground/.streamlit/: secrets.toml.encrypted
scripts/: get_dotenv.py
tests/: test_qr_data.py  test_scb.py
tests/test_example/: test_hello.py
tests/test_kbank_api/: conftest.py  test_kbank_prod.py  test_kbank_uat.py
tests/test_scb_api/: conftest.py  test_uat.py
tests/test_services/: test_kbank.py
thanakan/: __init__.py
thanakan/models/: FI_CODE.xlsx  bankcode.py
thanakan/services/: __init__.py  base.py  kbank.py  scb.py
thanakan/services/model/: common.py  kbank.py  scb.py  status.txt
thanakan/slip/: __init__.py  qrcode.py
